[package]
name = "grokloc-rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "GrokLOC.com application server"
readme = "README.md"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
hex = "0.4.3"
openssl-sys = "0.9.74"
openssl = "0.10.40"
regex = "1.5.6"

uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
sqlx = { version = "0.6.0", features = [ "runtime-async-std-native-tls", "sqlite", "any" ] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
