[package]
name = "grokloc-rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "GrokLOC.com application server"
readme = "README.md"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
chrono = "0.4"
hex = "0.4.3"
openssl-sys = "0.9.75"
openssl = "0.10.41"
regex = "1.6.0"

uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls", "sqlite", "any" ] }
tokio = { version = "1.19.2", features = ["full"] }
